--- a/src/main/webapp/hr/hr_reports.xhtml
+++ b/src/main/webapp/hr/hr_reports.xhtml
@@ -59,6 +59,10 @@
                                                          value="(9) EPF ETF" 
                                                          styleClass="linkButton"
                                                          actionListener="#{staffBasicController.makeItemNul()}"  />
+                                        <p:commandButton ajax="false" action="/hr/hr_report_staff_epf_etf_to_export"
+                                                         value="(9.1) EPF ETF(Export)" 
+                                                         styleClass="linkButton"
+                                                         actionListener="#{staffBasicController.makeItemNul()}"  />
                                         <p:commandButton ajax="false" action="/hr/hr_report_staff_salary_generate _or_not"
                                                          value="(10) Staff Salary Generate Or Not Report" 
                                                          styleClass="linkButton"
