--- a/src/main/webapp/hr/hr_staff_admin.xhtml
+++ b/src/main/webapp/hr/hr_staff_admin.xhtml
@@ -99,6 +99,9 @@
 
                                             <p:outputLabel  value="Name with Initials" ></p:outputLabel>
                                             <p:inputText autocomplete="off"  value="#{staffController.current.person.nameWithInitials}"  styleClass="longText" />
+                                            
+                                            <p:outputLabel  value="Last Name" ></p:outputLabel>
+                                            <p:inputText autocomplete="off"  value="#{staffController.current.person.lastName}"   styleClass="longText"/>
 
                                             <p:outputLabel  value="NIC No" ></p:outputLabel>
                                             <p:inputMask mask="999999999V" value="#{staffController.current.person.nic}" />
