--- a/src/main/webapp/hr/hr_staff_loan_installment.xhtml
+++ b/src/main/webapp/hr/hr_staff_loan_installment.xhtml
@@ -38,7 +38,9 @@
                         <h:outputLabel value="Account No"/>
                         <p:inputText autocomplete="off"  value="#{staffLoanController.current.accountNo}"/>
                         <p:outputLabel value="Bank Branch"/>                                           
-                        <hr:completeBank_Branch value="#{staffLoanController.current.bankBranch}"/>                                           
+                        <hr:completeBank_Branch value="#{staffLoanController.current.bankBranch}"/>  
+                        <h:outputLabel value="Starting Balance"/>
+                        <p:inputText autocomplete="off"  value="#{staffLoanController.current.startingBalance}"/>
                         <h:outputLabel value="Full Amount"/>
                         <p:inputText autocomplete="off"  value="#{staffLoanController.current.loanFullAmount}"/>  
                         <h:outputLabel/>
