Signed-off-by: Ruhunu <ruhunuDump@gmail.com>

--- a/src/main/webapp/resources/hr/pay_slip_2.xhtml
+++ b/src/main/webapp/resources/hr/pay_slip_2.xhtml
@@ -325,7 +325,7 @@
                         <table style="font-size: 12px!important; letter-spacing: 0px; font-family: Times New Roman!important;">                    
                             <tr>
                                 <td style="text-align: left;">
-                                    <h:outputText value="Over Time" style="text-align: left;"/> 
+                                    <h:outputText value="Over 45 Time" style="text-align: left;"/> 
                                 </td>
                                 <td>
                                     <h:outputLabel value=":" style="width: 200px;"/>
@@ -338,7 +338,7 @@
                             </tr>
                             <tr>
                                 <td style="text-align: left;">
-                                    <h:outputText value="Assist Time" style="text-align: left;"/> 
+                                    <h:outputText value="Extra Time" style="text-align: left;"/> 
                                 </td>
                                 <td>
                                     <h:outputLabel value=":"/>
