--- a/src/main/webapp/reportLab/lab_summeries_index.xhtml
+++ b/src/main/webapp/reportLab/lab_summeries_index.xhtml
@@ -15,8 +15,8 @@
                                 <p:panel header="1)Monthly Summeries" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
                                     <p:panelGrid columns="1" styleClass="alignTop">
                                         <p:commandButton styleClass="linkButton" ajax="false" value="1)Investigation Counts" action="investigation_counts"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="2)Turn Over Time Average" action="turn_over_time"/> 
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="3)Turn Over Time By Bills" action="turn_over_time_bills"/> 
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="2)Turn Around Time Average" action="turn_over_time"/> 
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="3)Turn Around Time By Bills" action="turn_over_time_bills"/> 
                                         <p:commandButton styleClass="linkButton" ajax="false" value="4)Report by Collection Centre(Detail)" action="report_lab_collection_centre.xhtml"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="5)Report by Collection Centre(Summery)" action="report_lab_collection_centre_summery.xhtml"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="6)Report by Collection Centre Count" action="report_lab_by_collection_centre_investigation_count.xhtml"/>                            
@@ -54,11 +54,10 @@
                                 </p:panel>
                                 <p:panel header="4)Counts" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
                                     <p:panelGrid columns="1" styleClass="alignTop">
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="1)By Billed Institution" action="report_lab_by_billed_institution"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="2)By Billed Department" action="report_lab_by_billed_department"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="3)By Reported Institution" action="report_lab_by_reported_institution"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="4)By Reported Department" action="report_lab_by_reported_department"/>
-                                        
+                                        <p:commandButton actionListener="#{investigationMonthSummeryOwnControllerSession.clearList}" styleClass="linkButton" ajax="false" value="1)By Billed Institution" action="report_lab_by_billed_institution"/>
+                                        <p:commandButton actionListener="#{investigationMonthSummeryOwnControllerSession.clearList}" styleClass="linkButton" ajax="false" value="2)By Billed Department" action="report_lab_by_billed_department"/>
+                                        <p:commandButton actionListener="#{investigationMonthSummeryOwnControllerSession.clearList}" styleClass="linkButton" ajax="false" value="3)By Reported Institution" action="report_lab_by_reported_institution"/>
+                                        <p:commandButton actionListener="#{investigationMonthSummeryOwnControllerSession.clearList}" styleClass="linkButton" ajax="false" value="4)By Reported Department" action="report_lab_by_reported_department"/>
                                     </p:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
