--- a/src/main/webapp/reportLab/turn_over_time.xhtml
+++ b/src/main/webapp/reportLab/turn_over_time.xhtml
@@ -17,7 +17,7 @@
 
 
                 <p:panel id="panelPrint"  
-                         header="Turnover Time">
+                         header="Turn Around Time">
 
                     <h:panelGrid columns="2" style="min-width: 50%;" styleClass="noPrintButton">
                         <h:outputLabel value="Investigation"/>
@@ -40,15 +40,15 @@
 
 
                         <h:outputLabel value="From"/>
-                        <p:calendar id="frmDate" value="#{investigationMonthSummeryOwnControllerSession.fromDate}" pattern="dd MMMM yyyy HH:mm:ss" >
+                        <p:calendar id="frmDate" styleClass="dateTimePicker" value="#{investigationMonthSummeryOwnControllerSession.fromDate}" pattern="dd MMMM yyyy HH:mm:ss" >
                         </p:calendar>
 
                         <h:outputLabel value="To"/>
-                        <p:calendar id="toDate" value="#{investigationMonthSummeryOwnControllerSession.toDate}" pattern="dd MMMM yyyy HH:mm:ss" >
+                        <p:calendar id="toDate" styleClass="dateTimePicker" value="#{investigationMonthSummeryOwnControllerSession.toDate}" pattern="dd MMMM yyyy HH:mm:ss" >
                         </p:calendar>
 
                        <h:outputLabel value=""/>
-                        <p:commandButton ajax="false"  value="Process."  
+                        <p:commandButton ajax="false"  value="Process"  
                                          action="#{investigationMonthSummeryOwnControllerSession.createInvestigationTurnoverTime}"
                                          styleClass="noPrintButton" style="float: left;" />
 
@@ -56,7 +56,7 @@
 
                     <p:panel style="width: 500px; margin-top: 20px;">
                         
-                        <h:outputLabel style="font-size: 15pt!important; color: red;" value="Average turn-over time for #{investigationMonthSummeryOwnControllerSession.item.name} is " ></h:outputLabel>
+                        <h:outputLabel style="font-size: 15pt!important; color: red;" value="Average Turn Around Time for #{investigationMonthSummeryOwnControllerSession.item.name} is " ></h:outputLabel>
                             <h:outputLabel style="font-size: 15pt!important; color: red;" value="#{investigationMonthSummeryOwnControllerSession.totalCount}" ></h:outputLabel>
                             <h:outputLabel style="font-size: 15pt!important; color: red;" value=" minutes." ></h:outputLabel>
                        
