--- a/src/main/webapp/reportLab/turn_over_time_bills.xhtml
+++ b/src/main/webapp/reportLab/turn_over_time_bills.xhtml
@@ -18,26 +18,26 @@
 
 
                 <p:panel id="panelPrint"  
-                         header="Turnover Time">
+                         header="Turn Around Time">
 
                     <h:panelGrid columns="2" style="min-width: 50%;" styleClass="noPrintButton">
-                        <h:outputLabel value="Department"/>
-                        <autocomplete:department value="#{investigationMonthSummeryOwnControllerSession.department}" ></autocomplete:department>
-
+                        
                         <h:outputLabel value="From"/>
-                        <p:calendar id="frmDate" navigator="true" value="#{investigationMonthSummeryOwnControllerSession.fromDate}" pattern="dd MMMM yyyy HH:mm:ss" >
+                        <p:calendar id="frmDate" styleClass="dateTimePicker" navigator="true" value="#{investigationMonthSummeryOwnControllerSession.fromDate}" pattern="dd MMMM yyyy HH:mm:ss" >
                         </p:calendar>
 
                         <h:outputLabel value="To"/>
-                        <p:calendar id="toDate"  navigator="true" value="#{investigationMonthSummeryOwnControllerSession.toDate}" pattern="dd MMMM yyyy HH:mm:ss" >
+                        <p:calendar id="toDate" styleClass="dateTimePicker"  navigator="true" value="#{investigationMonthSummeryOwnControllerSession.toDate}" pattern="dd MMMM yyyy HH:mm:ss" >
                         </p:calendar>
-
-                        <p:commandButton value="Excel" ajax="false" styleClass="noPrintButton" style="float: right;" >
+                        <h:outputLabel value="Department"/>
+                        <autocomplete:department value="#{investigationMonthSummeryOwnControllerSession.department}" ></autocomplete:department>
+                        <p:commandButton ajax="false"  value="Process"  
+                                         action="#{investigationMonthSummeryOwnControllerSession.createInvestigationTurnoverTimeByBills}"
+                                         styleClass="noPrintButton" />
+                        <p:commandButton value="Excel" ajax="false" styleClass="noPrintButton" >
                             <pe:exporter type="xlsx" target="tbl" fileName="turn over time"/>
                         </p:commandButton>
-                        <p:commandButton ajax="false"  value="Process."  
-                                         action="#{investigationMonthSummeryOwnControllerSession.createInvestigationTurnoverTimeByBills}"
-                                         styleClass="noPrintButton" style="float: left;" />
+                        
 
                     </h:panelGrid>
 
@@ -54,14 +54,20 @@
                             <p:column headerText="Bill Type" >
                                 <p:outputLabel value="#{pi.billItem.bill.billType.label}" ></p:outputLabel>
                             </p:column>
-                            <p:column headerText="Bill No" >
-                                <p:outputLabel value="#{pi.billItem.bill.deptId}" ></p:outputLabel>
+<!--                            <p:column headerText="toDepartment" >
+                                <p:outputLabel value="#{pi.billItem.bill.toDepartment.name}" ></p:outputLabel>
                             </p:column>
+                            <p:column headerText="department" >
+                                <p:outputLabel value="#{pi.billItem.bill.department.name}" ></p:outputLabel>
+                            </p:column>
+                            <p:column headerText="fromDepartment" >
+                                <p:outputLabel value="#{pi.billItem.bill.fromDepartment.name}" ></p:outputLabel>
+                            </p:column>-->
                             <p:column headerText="Investigation" >
                                 <p:outputLabel value="#{pi.billItem.item.name}" ></p:outputLabel>
                             </p:column>
-                            <p:column headerText="Billed At" >
-                                <p:outputLabel value="#{pi.billItem.bill.createdAt}" >
+                            <p:column headerText="Sample Colleted At" >
+                                <p:outputLabel value="#{pi.sampledAt}" >
                                     <f:convertDateTime pattern="dd MMM yyyy hh:mm a" ></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
@@ -70,19 +76,19 @@
                                     <f:convertDateTime pattern="dd MMM yyyy hh:mm a" ></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
-                            <p:column headerText="Turn over time" >
+                            <p:column headerText="Turn Around time" >
                                 <h:panelGroup rendered="#{pi.printingAt ne null}" >
-                                    <p:outputLabel value="#{commonController.dateDifferenceInMinutes(pi.billItem.bill.createdAt, pi.printingAt)}" rendered="#{commonController.dateDifferenceInMinutes(pi.billItem.bill.createdAt, pi.printingAt) lt 60}" >
+                                    <p:outputLabel value="#{commonController.dateDifferenceInMinutes(pi.sampledAt, pi.printingAt)}" rendered="#{commonController.dateDifferenceInMinutes(pi.sampledAt, pi.printingAt) lt 60}" >
                                         <f:convertNumber pattern="0" ></f:convertNumber>
                                     </p:outputLabel>
-                                    <p:outputLabel value=" minutes" rendered="#{commonController.dateDifferenceInMinutes(pi.billItem.bill.createdAt, pi.printingAt) lt 60}" >
+                                    <p:outputLabel value=" minutes" rendered="#{commonController.dateDifferenceInMinutes(pi.sampledAt, pi.printingAt) lt 60}" >
                                     </p:outputLabel>
-                                    <p:outputLabel value="#{commonController.dateDifferenceInMinutes(pi.billItem.bill.createdAt, pi.printingAt)/60}" rendered="#{commonController.dateDifferenceInMinutes(pi.billItem.bill.createdAt, pi.printingAt) gt 60}" >
+                                    <p:outputLabel value="#{commonController.dateDifferenceInMinutes(pi.sampledAt, pi.printingAt)/60}" rendered="#{commonController.dateDifferenceInMinutes(pi.sampledAt, pi.printingAt) gt 60}" >
                                         <f:convertNumber pattern="0.0" ></f:convertNumber>
                                     </p:outputLabel>
-                                    <p:outputLabel value=" hours" rendered="#{commonController.dateDifferenceInMinutes(pi.billItem.bill.createdAt, pi.printingAt) gt 60}" >
+                                    <p:outputLabel value=" hours" rendered="#{commonController.dateDifferenceInMinutes(pi.sampledAt, pi.printingAt) gt 60}" >
                                     </p:outputLabel>
-                                    <p:outputLabel value="One Hour" rendered="#{commonController.dateDifferenceInMinutes(pi.billItem.bill.createdAt, pi.printingAt) eq 60}" >
+                                    <p:outputLabel value="One Hour" rendered="#{commonController.dateDifferenceInMinutes(pi.sampledAt, pi.printingAt) eq 60}" >
                                     </p:outputLabel>
                                 </h:panelGroup>
                             </p:column>
