Signed-off-by: Ruhunu <ruhunuDump@gmail.com>

--- a/src/main/webapp/reportLab/turn_over_time_bills.xhtml
+++ b/src/main/webapp/reportLab/turn_over_time_bills.xhtml
@@ -54,7 +54,7 @@
                             <p:column headerText="Bill Type" >
                                 <p:outputLabel value="#{pi.billItem.bill.billType.label}" ></p:outputLabel>
                             </p:column>
-<!--                            <p:column headerText="toDepartment" >
+                            <p:column headerText="toDepartment" >
                                 <p:outputLabel value="#{pi.billItem.bill.toDepartment.name}" ></p:outputLabel>
                             </p:column>
                             <p:column headerText="department" >
@@ -62,7 +62,7 @@
                             </p:column>
                             <p:column headerText="fromDepartment" >
                                 <p:outputLabel value="#{pi.billItem.bill.fromDepartment.name}" ></p:outputLabel>
-                            </p:column>-->
+                            </p:column>
                             <p:column headerText="Investigation" >
                                 <p:outputLabel value="#{pi.billItem.item.name}" ></p:outputLabel>
                             </p:column>
