--- a/src/main/webapp/reportLab/report_lab_by_reported_department.xhtml
+++ b/src/main/webapp/reportLab/report_lab_by_reported_department.xhtml
@@ -17,12 +17,12 @@
 
                     <h:outputLabel value="From Date"/>
 
-                    <p:calendar styleClass="dateTimePicker" value="#{investigationMonthSummeryOwnControllerSession.fromDate}" navigator="true" pattern="dd MMMM yyyy "  >
+                    <p:calendar styleClass="dateTimePicker" value="#{investigationMonthSummeryOwnControllerSession.fromDate}" navigator="true" pattern="dd MMMM yyyy hh:mm:ss a"  >
                     </p:calendar>
 
                     <h:outputLabel value="To Date"/>
 
-                    <p:calendar styleClass="dateTimePicker" value="#{investigationMonthSummeryOwnControllerSession.toDate}" navigator="true" pattern="dd MMMM yyyy " >
+                    <p:calendar styleClass="dateTimePicker" value="#{investigationMonthSummeryOwnControllerSession.toDate}" navigator="true" pattern="dd MMMM yyyy hh:mm:ss a" >
                     </p:calendar>
 
                     <h:outputLabel value="Reported Departmant"/>
